--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
         </div>
 
         <nav class="header-links">
-            <a href="diseno.html" class="header-links-font">proyecto 1</a>
-            <a href="index.html" class="header-links-font">proyecto 2</a>
+            <a href="index.html" class="header-links-font">proyecto 1</a>
+      <a href="proyecto2.html" class="header-links-font">proyecto 2</a>
         </nav>
 
         <a href="https://www.umng.edu.co/inicio" class="umng-link">
