--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 
             <section id="video" class="video-container-content">
                 <div class="video-container">
-                    <iframe width="1120" height="630"
+                    <iframe width="1575px" height="885"
                         src="https://www.youtube.com/embed/njX2bu-_Vw4?si=OfYHcK1exvBfbNeX" title="Video de YouTube"
                         frameborder="0"
                         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
